Bug 65802 - Weston lock screen consistently hangs my system
Summary: Weston lock screen consistently hangs my system
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-15 19:12 UTC by Darxus
Modified: 2013-10-16 18:13 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Darxus 2013-06-15 19:12:24 UTC
Every time I walk away from my computer, while running weston, long enough for a screensaver to kick in, when I come back it's hung.  My monotor's light indicating that it's getting no video input.  alt-sysreq-reisub does reboot.  

SardemFF7 says this is caused by the lock screen which comes up when it receives input after running the screensaver, and was apparently discussed by krh and pq.  

The weston.ini man page seems to say that an empty screensaver section will disable the screensaver.  But I guess that just means no application is display, the screen is still blanked and locked?

Is there some kind of workaround to get the lock screen to not happen?
Comment 1 Darxus 2013-06-15 21:04:03 UTC
alt-sysrq-r, ctrl-alt-del does work from this state.
Comment 2 Darxus 2013-06-17 23:52:25 UTC
Launching weston with a -i0 command line argument (as mentioned in the weston man page) does sound like an effective workaround.
Comment 3 Darxus 2013-06-19 01:12:50 UTC
The command line for the above workaround is:

weston-launch -- -i0

And it does appear to work for me.
Comment 4 Rob Bradford 2013-07-23 14:53:33 UTC
Darxus, how would you like to proceed with this bug? Nobody else has indicated that this is problem. Is this still a problem for you?
Comment 5 set.mailinglist 2013-08-12 01:07:54 UTC
Just a note that this happened to me just now, running weston 1.2, wayland
head, radeon r600.
Comment 6 Kristian Høgsberg 2013-10-16 18:13:00 UTC
I think we found this problem, try this commit from master:

commit 991810c1b3eb243a2137fc7e9e5cc5214b7f6330
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Oct 16 11:10:12 2013 -0700

    compositor: Stop the repaint loop if the compositor went to sleep
    
    We check the state when we schedule a repaint, but we will still repaint
    in weston_output_finish_frame() if a repaint is needed.  Now we check
    whether we went to sleep while waiting for the page flip and stop repainting
    in that case.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=65802


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.